--- a/pet-clinic-data/pom.xml
+++ b/pet-clinic-data/pom.xml
@@ -61,6 +61,12 @@
             <version>2.22.0</version>
             <scope>test</scope>
         </dependency>
+        <dependency>
+            <groupId>com.fasterxml.jackson.core</groupId>
+            <artifactId>jackson-annotations</artifactId>
+            <version>2.12.5</version>
+            <scope>compile</scope>
+        </dependency>
     </dependencies>
 
     <build>
